fixed alignment

--- a/main.less
+++ b/main.less
@@ -278,9 +278,6 @@ body {
 .committees > .item > ul > li:first-child {
   font-weight: 700;
 }
-.col-md-8 > h2 {
-  text-align: center;
-}
 #marketing .blackened {
   background: fade(@base, 75%);
   #jumbo {
